# Flower-Federated-Learning-Object-Detection-MSCOCO

./: README.md  client.py  coco_download.sh  coco_transfer.py  pyproject.toml  requirements.txt  run.sh  server.py  serverssd.py  utils.py
